fix header image layout issue

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -355,6 +355,10 @@ label {
   font-weight: 300;
 }
 
+.width-100{
+  width: 100%;
+}
+
 @media screen and (max-width: 425px) {
   .canvas-custom-class {
     width: 90% !important;
